# aoc2022

./: Cargo.toml  benchmark.md
.github/workflows/: benchmark-action.yml
src/: aoc1.rs  aoc2.rs  aoc3.rs  aoc4.rs  aoc_template.rs  main.rs
