[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
easybench = "1.1.0"
comfy-table = "6.0.0"
rayon = "1.5.3"
heapless = "0.7.14"

[dev-dependencies]
test-case = "2.1.0"
